# my-first-raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.ppm  view_img.sh
data/: sky_background_1000_800.ppm
results/: back_sphere.ppm  test.ppm
src/: AABB_cube.cpp  AABB_cube.h  camera.h  color.cpp  color.h  hit_point.h  img.cpp  img.h  img_io.cpp  img_io.h  light.h  main.cpp  material.cpp  material.h  plane.cpp  plane.h  point.h  ray.cpp  ray.h  scene.cpp  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  utils.cpp  utils.h  vector3.cpp  vector3.h  volume.h
